fix ie10 flew-wrap

--- a/src/scss/_specifics.scss
+++ b/src/scss/_specifics.scss
@@ -105,6 +105,7 @@
 	& > * {
 		box-sizing: border-box;
 		text-align: center;
+    display: inline-block;
 	}
 	a {
 		display: inline-block; padding: .5em;
